# ATV-Rivkah

./: LICENSE  README.md
modules/brake_module/: Dockerfile  ros_entrypoint.sh
modules/brake_module/rules/: 99-dynamixel.rules  copy_and_reload
modules/brake_module/src/dynamixel_sdk_custom_interfaces/: CMakeLists.txt  package.xml
modules/brake_module/src/dynamixel_sdk_custom_interfaces/include/: braking_node.hpp
modules/brake_module/src/dynamixel_sdk_custom_interfaces/msg/: SetBrake.msg
modules/brake_module/src/dynamixel_sdk_custom_interfaces/src/: braking_node.cpp
modules/joyStick_module/src/joy_stick_module/: package.xml  setup.cfg  setup.py
modules/joyStick_module/src/joy_stick_module/joy_stick_module/: joy_msg_pub.py  joy_stick_module.py
modules/velocity_module/: .gitignore
modules/velocity_module/rules/: 01-drive_teensy.rules  readme.md
modules/velocity_module/src/velocity_module/: CMakeLists.txt  package.xml
modules/velocity_module/src/velocity_module/include/: velocity_node.hpp
modules/velocity_module/src/velocity_module/src/: velocity_node  velocity_node.cpp  velocity_node_backup.cpp
modules/velocity_module/teensy/velocity_module/: structs_and_functions.h  velocity_module.ino
